# magika

./: README.md  pyproject.toml
python/magika/: __init__.py
