[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magika"
version = "0.6.0"
description = "Detect the content type (MIME type) of files using deep learning"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Google LLC", email = "magika-dev@google.com" },
]
maintainers = [
    { name = "Magika Contributors" },
]
keywords = ["file", "magic", "mime", "content-type", "deep-learning", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineeringclick>=8.0.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.17n
[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[project.scripts]
magika = "magika.cli:main"

[project.urls]
Homepage = "https://github.com/google/magika"
Repository = "https://github.com/google/magika"
Issues = "https://github.com/google/magika/issues"
Documentation = "https://google.github.io/magika/"

[tool.hatch.build.targets.wheel]
packages = ["python/src/magika"]

[tool.hatch.build.targets.sdist]
include = [
    "python/src/magika",
    "LICENSE",
    "README.md",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = "--cov=magika --cov-report=term-missing"
